package org.example;

public interface Hamburguesa {
    String getDescripcion();
}