package org.example;

public class HamburguesaBase implements Hamburguesa {
    @Override
    public String getDescripcion() {
        return "Carne + Pan";
    }
}

